[project]
name = "spoolman"
version = "0.23.1"
description = "A web service that keeps track of 3D printing spools."
license = "MIT"
readme = "README.md"
authors = [{ name = "Donkie", email = "daniel.cf.hultgren@gmail.com" }]
dependencies = [
    "uvicorn~=0.34",
    "httptools>=0.6.4; platform_machine != \"armv7l\"",
    "uvloop!=0.15.0,!=0.15.1,>=0.21.0; platform_machine != \"armv7l\" and sys_platform != \"win32\" and (sys_platform != \"cygwin\" and platform_python_implementation != \"PyPy\")",
    "fastapi~=0.115",
    "SQLAlchemy[aiomysql,aiosqlite,asyncio,postgresql_asyncpg]~=2.0",
    "pydantic~=2.10",
    "platformdirs~=4.3",
    "alembic~=1.15",
    "scheduler~=0.8",
    "sqlalchemy-cockroachdb~=2.0",
    "asyncpg~=0.30",
    "psycopg2-binary~=2.9",
    "setuptools~=78.1",
    "WebSockets~=15.0",
    "prometheus-client~=0.21",
    "httpx~=0.28",
    "hishel~=0.1",
    "aiomysql[rsa]~=0.3",
]
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "ruff==0.14.10",
    "pytest~=8.3.5",
    "pytest-asyncio~=0.25.3",
    "pytest-cov~=4.1",
    "pytest-httpx~=0.21.0",
    "pytest-mock~=3.11",
    "httpx~=0.28.1",
    "anyio~=3.7",
    "starlette~=0.29",
    "pre-commit>=3.3",
    "poethepoet>=0.40.0",
]

[tool.poe.tasks.generate-docs]
script = "spoolman.docs:generate_docs"
help = "Generate API documentation for Spoolman."

[tool.poe.tasks.bump]
script = "spoolman.bump:bump"
help = "Bump Spoolman version."

[tool.poe.tasks.run]
cmd = "uvicorn spoolman.main:app"
help = "Start Spoolman."

[tool.poe.tasks.itest]
cmd = "python tests_integration/run.py"
help = "Builds Spoolman and runs integration tests on the backend against all supported databases."

[tool.bumpversion]
current_version = "0.22.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
allow_dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A003",
    "COM812",
    "D101",
    "D104",
    "D203",
    "D213",
    "D406",
    "D407",
    "DTZ003",
    "EM101",
    "EM102",
    "FA100",
    "FIX002",
    "PLR0913",
    "S104",
    "S603",
    "SIM108",
    "TD002",
    "TD003",
    "TRY003",
    "TRY201",
]

[tool.ruff.lint.per-file-ignores]
"tests*/*" = ["ANN201", "ASYNC210", "S101", "PLR2004", "D103", "TID252"]
"migrations/versions/*" = ["N999"]
