[project]
name = "spoolman"
version = "2026.6.1"
description = "Spoolman NG - a self-hosted web service that keeps track of your 3D-printer filament spools."
license = "MIT"
readme = "README.md"
authors = [{ name = "Donkie", email = "daniel.cf.hultgren@gmail.com" }]
maintainers = [{ name = "sherrmann" }]
dependencies = [
    "uvicorn~=0.34",
    "httptools>=0.6.4; platform_machine != \"armv7l\"",
    "uvloop!=0.15.0,!=0.15.1,>=0.21.0; platform_machine != \"armv7l\" and sys_platform != \"win32\" and (sys_platform != \"cygwin\" and platform_python_implementation != \"PyPy\")",
    # FastAPI floor raised to 0.133 because older releases cap Starlette at
    # <0.51; 0.133+ relaxes that to starlette>=0.46.0, allowing the patched 1.x.
    "fastapi~=0.133",
    # Spoolman imports Starlette APIs directly (responses, staticfiles, websockets,
    # requests). Pin >=1.3.1 to pull the line that fixes the 0.x security issues:
    # CVE-2026-48710 (BadHost host-header path poisoning), CVE-2026-48817,
    # CVE-2026-48818, CVE-2026-54282 and CVE-2026-54283. Capped <2 since we depend
    # on Starlette's API surface directly.
    "starlette>=1.3.1,<2",
    "SQLAlchemy[aiomysql,aiosqlite,asyncio,postgresql_asyncpg]~=2.0",
    "pydantic~=2.10",
    "platformdirs~=4.3",
    "alembic~=1.15",
    "scheduler~=0.8",
    "sqlalchemy-cockroachdb~=2.0",
    "asyncpg~=0.30",
    "psycopg2-binary~=2.9",
    "setuptools~=82.0",
    "WebSockets~=16.0",
    "prometheus-client~=0.21",
    "httpx~=0.28",
    "hishel~=0.1",
    "aiomysql[rsa]~=0.3",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/sherrmann/Spoolman"
Repository = "https://github.com/sherrmann/Spoolman"
Issues = "https://github.com/sherrmann/Spoolman/issues"
Documentation = "https://sherrmann.github.io/Spoolman/"

[project.optional-dependencies]
# cbor2 6.x is a Rust extension with no 32-bit-ARM wheel, so on armv7 we use the
# C-based 5.x line (builds from source / pure-Python there). Spoolman only uses
# cbor2.load/dumps, which are identical across 5.x and 6.x.
nfc = [
    "nfcpy>=1.0",
    "ndeflib>=0.3",
    "cbor2>=5.4; platform_machine != 'armv7l'",
    "cbor2>=5.4,<6; platform_machine == 'armv7l'",
]

[dependency-groups]
dev = [
    "ruff==0.14.10",
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "pytest-cov~=7.0",
    "httpx~=0.28.1",
    "poethepoet>=0.40.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.poe.tasks.generate-docs]
script = "spoolman.docs:generate_docs"
help = "Generate API documentation for Spoolman."

[tool.poe.tasks.bump]
script = "spoolman.bump:bump"
help = "Bump Spoolman version."

[tool.poe.tasks.run]
cmd = "uvicorn spoolman.main:app"
help = "Start Spoolman."

[tool.poe.tasks.itest]
cmd = "python tests_integration/run.py"
help = "Builds Spoolman and runs integration tests on the backend against all supported databases."

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A003",
    "COM812",
    "D101",
    "D104",
    "D203",
    "D213",
    "D406",
    "D407",
    "DTZ003",
    "EM101",
    "EM102",
    "FA100",
    "FIX002",
    "PLR0913",
    "S104",
    "S603",
    "SIM108",
    "TD002",
    "TD003",
    "TRY003",
    "TRY201",
]

[tool.ruff.lint.per-file-ignores]
"tests*/*" = ["ANN201", "ASYNC210", "S101", "PLR2004", "D103", "TID252", "PT011"]
"migrations/versions/*" = ["N999"]
# NFC support modules are binary-protocol codecs and hardware (USB/NFC) I/O.
# Magic byte values, branchy decoders/state machines, defensive broad-except
# around hardware reads, lazy optional-dep imports, and boolean format flags are
# idiomatic for this domain (cf. the tests* PLR2004 relaxation above).
"spoolman/tigertag*.py" = ["PLR2004", "C901", "PLR0911", "PLR0912", "PLR0915", "BLE001", "S110", "PERF203", "TRY300", "SIM105", "FBT001", "FBT002", "ARG001", "ARG002", "ARG005", "D107", "PLC0415"]
"spoolman/qidi*.py" = ["PLR2004", "C901", "PLR0911", "PLR0912", "PLR0915", "BLE001", "S110", "PERF203", "TRY300", "SIM105", "FBT001", "FBT002", "ARG001", "ARG002", "ARG005", "D107", "PLC0415"]
"spoolman/openprinttag*.py" = ["PLR2004", "C901", "PLR0911", "PLR0912", "PLR0915", "BLE001", "S110", "PERF203", "TRY300", "SIM105", "FBT001", "FBT002", "ARG001", "ARG002", "ARG005", "D107", "PLC0415"]
"spoolman/nfc_service.py" = ["PLR2004", "C901", "PLR0911", "PLR0912", "PLR0915", "BLE001", "S110", "PERF203", "TRY300", "SIM105", "FBT001", "FBT002", "ARG001", "ARG002", "ARG005", "D107", "PLC0415"]
# nfc.py is API surface: type hints and response models are kept strict (fixed
# in code); relax the byte-level/defensive-IO/format-flag rules shared with the
# codecs, plus the lazy optional-dep imports that keep nfcpy/cbor2/ndeflib out
# of the base import path.
"spoolman/api/v1/nfc.py" = ["PLR2004", "BLE001", "S110", "FBT001", "FBT002", "PLC0415"]
